--- a/CinemaBook/Base.lproj/Main.storyboard
+++ b/CinemaBook/Base.lproj/Main.storyboard
@@ -104,13 +104,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lCg-WP-AEV">
-                                <rect key="frame" x="0.0" y="308" width="375" height="359"/>
+                                <rect key="frame" x="0.0" y="433" width="375" height="234"/>
                                 <connections>
                                     <segue destination="Eyx-Yi-KWE" kind="embed" id="ON5-XG-Er0"/>
                                 </connections>
                             </containerView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Capture2 copy" translatesAutoresizingMaskIntoConstraints="NO" id="Gsn-LX-MfH">
-                                <rect key="frame" x="65" y="62" width="245" height="125"/>
+                                <rect key="frame" x="65" y="62" width="245" height="250"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -131,6 +131,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dfd-BR-FUm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1784.8" y="122.78860569715144"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="6y1-Lv-ZBJ">
+            <objects>
+                <viewController id="x4d-bD-l5J" customClass="MapViewController" customModule="CinemaBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rkG-BX-4Ob"/>
+                        <viewControllerLayoutGuide type="bottom" id="LSJ-Ol-fBz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YVn-K0-OG8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QPf-mY-XEt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-510" y="806"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="lMy-t3-uk1">
@@ -211,7 +229,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Eae-PJ-aXY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="IIg-gt-K28">
-                        <rect key="frame" x="0.0" y="0.0" width="118" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="a5A-7E-M1v">
@@ -223,7 +241,7 @@
                                         <rect key="frame" x="0.0" y="28" width="118" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Byf-H6-e19" id="5gO-Q5-G4B">
-                                            <rect key="frame" x="0.0" y="0.0" width="118" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="118" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -281,7 +299,7 @@
                 <navigationController autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" id="9o4-37-NPh" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Ua-c7-Cfe">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="2Ua-c7-Cfe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -307,7 +325,7 @@
                         <viewControllerLayoutGuide type="bottom" id="K4N-bp-q7Y"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="CqU-hs-VTE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="359"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="234"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="F1p-Rj-TdR">
@@ -319,7 +337,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2FQ-jr-uow" id="4Yp-5s-EK3">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.28151311528497414" green="0.016554617298577535" blue="0.0025468492941466887" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -340,7 +358,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Capture2 copy" width="150" height="125"/>
+        <image name="Capture2 copy" width="301" height="250"/>
         <image name="if_menu-alt_134216" width="28" height="28"/>
     </resources>
     <inferredMetricsTieBreakers>
